[gd_scene load_steps=7 format=3 uid="uid://cvnl3cl6brqra"]

[ext_resource type="Script" path="res://Scence/game_manager.gd" id="1_fc13y"]
[ext_resource type="PackedScene" uid="uid://dg463224bexfl" path="res://Scence/world.tscn" id="2_0nhx4"]
[ext_resource type="PackedScene" uid="uid://yhwy86pnglwa" path="res://System/UI/paused_menu_canva.tscn" id="3_dovoi"]
[ext_resource type="PackedScene" uid="uid://pii462puyo76" path="res://System/UI/skill_status.tscn" id="3_l0k0m"]
[ext_resource type="PackedScene" uid="uid://cm5pt6sxyy1s6" path="res://System/UI/dead_menu.tscn" id="4_7lc6a"]
[ext_resource type="AudioStream" uid="uid://bgfnxshmsgy66" path="res://Asset/Sounds/start-the-engine-21180.mp3" id="5_ujgop"]

[node name="GameManager" type="Node2D"]
process_mode = 3
script = ExtResource("1_fc13y")

[node name="world" parent="." instance=ExtResource("2_0nhx4")]

[node name="Camera2D" parent="world/Chincilla" index="3"]
scale = Vector2(1, 1)
limit_right = 2158

[node name="CollisionShape2D" parent="world/Chincilla/MaleeAtk" index="0"]
position = Vector2(120, -2.5)

[node name="SkillStatus" parent="world/Chincilla/UI" index="8" instance=ExtResource("3_l0k0m")]

[node name="EnemySpawner" parent="world" index="2"]
visible = true

[node name="PausedMenuCanva" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("3_dovoi")]
visible = false
game_manager = NodePath("..")

[node name="Label" parent="PausedMenuCanva/VBoxContainer" index="0"]
theme_override_font_sizes/font_size = 40

[node name="DeadMenu" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("4_7lc6a")]
visible = false
game_manager = NodePath("..")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ujgop")
volume_db = -30.0
autoplay = true

[connection signal="pressed" from="PausedMenuCanva/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausedMenuCanva/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="DeadMenu/VBoxContainer/QuitFromDied" to="." method="_on_quit_from_died_pressed"]

[editable path="world"]
[editable path="world/Chincilla"]
[editable path="world/Chincilla/MaleeAtk"]
[editable path="world/Chincilla/UI"]
[editable path="PausedMenuCanva"]
[editable path="DeadMenu"]
